  anonymous users instead of null.
* (bug 22627) Remove PHP notice when deleting a page only hidden users edited.
* (bug 21520) Anonymous previews now also gives a warning about not being 
  logged in (anonpreviewwarning).
* (bug 22935) image/x-ms-bmp mime type added for BMP files
* (bug 23024) Special:ListFiles now escapes file names correctly

=== API changes in 1.17 ===
* (bug 22738) Allow filtering by action type on query=logevent
* (bug 22764) uselang parameter for action=parse
* (bug 22944) API: watchlist options are inconsistent
* (bug 22339) "Go" result should be available through the API
* (bug 22868) don't list infinite block expiry date as "now" in API logevents
* (bug 22290) prop=revisions now outputs "comment" field even when comment
  is empty, for consistency with list=recentchanges
  
=== Languages updated in 1.17 ===

== Compatibility ==

MediaWiki 1.17 requires PHP 5.1 (5.2 recommended). PHP 4 is no longer supported.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.17 has several database changes since 1.16, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons reposito-
ry, make sure that it is updated as well. Otherwise, errors may arise due to
database schema changes.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.


=== Caveats ===

Some output, particularly involving user-supplied inline HTML, may not
produce 100% valid or well-formed XHTML output. Testers are welcome to